--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "indexof": "^0.0.1",
     "just-toasty": "^1.3.0",
     "rc-slider": "^8.6.13",
+    "react-content-loader": "^5.0.1",
     "react-datepicker": "^2.8.0",
     "react-modal": "^3.9.1",
     "react-phone-input-2": "^2.9.4",
