--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "@lessondesk/material-icons": "^1.0.2",
     "@storybook/addon-a11y": "5.2.0-beta.39",
     "@storybook/addon-actions": "5.2.0-beta.39",
-    "@storybook/addon-docs": "^5.2.0-beta.39",
+    "@storybook/addon-docs": "^5.3.14",
     "@storybook/addon-knobs": "5.2.0-beta.39",
     "@storybook/addon-storyshots": "5.2.0-beta.39",
     "@storybook/addon-storyshots-puppeteer": "5.2.0-beta.39",
     "@storybook/addon-viewport": "5.2.0-beta.39",
-    "@storybook/codemod": "^5.1.11",
+    "@storybook/codemod": "^5.3.14",
     "@storybook/react": "5.2.0-beta.39",
     "@storybook/theming": "5.2.0-beta.39",
     "babel-eslint": "10.0.2",
@@ -73,7 +73,7 @@
     "prettier-eslint-cli": "5.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
-    "react-datepicker": "^2.8.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "16.8.6",
     "react-test-renderer": "16.8.6",
     "rollup": "1.18.0",
@@ -102,17 +102,17 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.0",
+    "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
     "just-toasty": "^1.3.0",
+    "lodash": "^4.17.15",
     "rc-slider": "^8.6.13",
-    "react-content-loader": "^5.0.1",
-    "react-datepicker": "^2.8.0",
-    "react-modal": "^3.9.1",
-    "react-phone-input-2": "^2.9.4",
+    "react-content-loader": "^5.0.2",
+    "react-modal": "^3.11.2",
+    "react-phone-input-2": "^2.12.1",
     "react-timekeeper": "^2.0.4",
-    "react-tooltip": "^3.11.0",
-    "styled-system": "^5.0.15"
+    "react-tooltip": "^3.11.6",
+    "styled-system": "^5.1.5"
   },
   "browserslist": {
     "production": [
