--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
     "@lessondesk/babel-preset": "1.0.0",
     "@lessondesk/eslint-config": "1.4.0",
     "@lessondesk/material-icons": "^1.0.2",
-    "@storybook/addon-a11y": "5.2.0-beta.39",
-    "@storybook/addon-actions": "5.2.0-beta.39",
-    "@storybook/addon-docs": "^5.3.14",
-    "@storybook/addon-knobs": "5.2.0-beta.39",
-    "@storybook/addon-storyshots": "5.2.0-beta.39",
-    "@storybook/addon-storyshots-puppeteer": "5.2.0-beta.39",
-    "@storybook/addon-viewport": "5.2.0-beta.39",
-    "@storybook/codemod": "^5.3.14",
-    "@storybook/react": "5.2.0-beta.39",
-    "@storybook/theming": "5.2.0-beta.39",
+    "@storybook/addon-a11y": "5.3.17",
+    "@storybook/addon-actions": "5.3.17",
+    "@storybook/addon-docs": "^5.3.17",
+    "@storybook/addon-knobs": "5.3.17",
+    "@storybook/addon-storyshots": "5.3.17",
+    "@storybook/addon-storyshots-puppeteer": "5.3.17",
+    "@storybook/addon-viewport": "5.3.17",
+    "@storybook/codemod": "^5.3.17",
+    "@storybook/react": "5.3.17",
+    "@storybook/theming": "5.3.17",
     "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
