--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
     "just-toasty": "^1.3.0",
