--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@styled-system/prop-types": "^5.1.5",
     "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
     "just-toasty": "^1.3.0",
