--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lessondesk/schoolbus",
-  "version": "2.1.0",
+  "version": "0.0.0-dev",
   "description": "🚌 Lesson Desk Component Library",
   "main": "dist/index.cjs.js",
   "repository": {
