Added on pull_request to chromatic workflow

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -2,6 +2,10 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    types: [opened, edited]
+    branches:
+      - master
 
 #https://www.chromatic.com/docs/ci
 name: Storybook publish and chromatic automation
