--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "yarn lint:js && yarn lint:styles",
     "fmt": "prettier-eslint --write \"src/**/*.js\"",
     "build": "rollup --config",
-    "chromatic": "chromatic --exit-zero-on-changes",
+    "chromatic": "chromatic --exit-zero-on-changes --project-token=0r1m4x1jq86",
     "test": "jest"
   },
   "files": [
