--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build
-      run: npm install
+      run: npm install && npm run build
     - name: Publish
       if: github.ref == 'refs/heads/master'
       uses: mikeal/merge-release@master
