--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "yarn lint:js && yarn lint:styles",
     "fmt": "prettier-eslint --write \"src/**/*.js\"",
     "build": "rollup --config",
+    "prepare": "npm run build",
     "chromatic": "chromatic --exit-zero-on-changes --project-token=0r1m4x1jq86",
     "test": "jest"
   },
