Changed to babel instead of rollup for build

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint:styles": "stylelint --fix src/**/*.js",
     "lint": "yarn lint:js && yarn lint:styles",
     "fmt": "prettier-eslint --write \"src/**/*.js\"",
-    "build": "rollup --config",
+    "build": "babel src --ignore src/stories --out-dir dist",
     "prepare": "npm run build",
     "chromatic": "chromatic --exit-zero-on-changes --project-token=0r1m4x1jq86",
     "test": "jest"
@@ -79,12 +79,6 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "16.8.6",
     "react-test-renderer": "16.13.1",
-    "rollup": "1.18.0",
-    "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-css-porter": "1.0.2",
-    "rollup-plugin-filesize": "9.0.2",
-    "rollup-plugin-node-resolve": "5.2.0",
     "storybook-readme": "5.0.8",
     "style-loader": "0.23.1",
     "styled-components": "4.4.1",
@@ -110,7 +104,7 @@
     "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
     "just-toasty": "^1.3.0",
-    "lodash": "^4.17.16",
+    "lodash.debounce": "^4.0.8",
     "rc-slider": "^8.6.13",
     "react-content-loader": "^5.1.0",
     "react-modal": "^3.11.2",
