--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint:styles": "stylelint --fix src/**/*.js",
     "lint": "yarn lint:js && yarn lint:styles",
     "fmt": "prettier-eslint --write \"src/**/*.js\"",
-    "build": "babel src --out-dir dist",
+    "build": "babel src --out-dir dist && rollup --config",
     "prepare": "npm run build",
     "chromatic": "chromatic --exit-zero-on-changes --project-token=0r1m4x1jq86",
     "test": "jest"
@@ -100,6 +100,7 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@fullfacing/browserslist-config": "^1.0.2",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@styled-system/prop-types": "^5.1.5",
     "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
@@ -111,6 +112,8 @@
     "react-phone-input-2": "^2.12.1",
     "react-timekeeper": "^2.0.4",
     "react-tooltip": "^4.2.7",
+    "rollup": "^2.27.1",
+    "rollup-plugin-css-only": "^2.1.0",
     "styled-system": "^5.1.5"
   },
   "browserslist": [
