--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "@lessondesk/schoolbus",
   "version": "0.0.0-dev",
   "description": "🚌 Lesson Desk Component Library",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
+  "module": "lib-esm/index.js",
+  "style": "lib/index.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lessondesk/schoolbus.git"
+    "url": "git+https://github.com/fullfacing/schoolbus.git"
   },
   "bugs": {
-    "url": "https://github.com/lessondesk/schoolbus/issues"
+    "url": "https://github.com/fullfacing/schoolbus/issues"
   },
-  "homepage": "https://github.com/lessondesk/schoolbus#readme",
+  "homepage": "https://github.com/fullfacing/schoolbus#readme",
   "author": "Lesson Desk",
   "contributors": [
     "Tiaan du Plessis (https://tiaan.dev)",
@@ -23,23 +25,29 @@
     "build-storybook": "build-storybook -o storybook-build",
     "lint:js": "eslint --fix src",
     "lint:styles": "stylelint --fix src/**/*.js",
-    "lint": "yarn lint:js && yarn lint:styles",
+    "lint": "npm run lint:js && npm run lint:styles",
     "fmt": "prettier-eslint --write \"src/**/*.js\"",
-    "build": "babel src --out-dir dist && rollup --config",
+    "build": "npm run build:transpile:cjs && npm run build:transpile:esm && npm run build:postcss",
+    "build:transpile:cjs": "rm -rf lib && cross-env BABEL_MODULE=commonjs babel src --out-dir lib",
+    "build:transpile:esm": "rm -rf lib-esm && babel src --out-dir lib-esm",
+    "build:postcss": "cat src/index.css | postcss -u postcss-import > ./lib/index.css && cp ./lib/index.css ./lib-esm/index.css",
     "prepare": "npm run build",
     "chromatic": "chromatic --exit-zero-on-changes --project-token=0r1m4x1jq86",
     "test": "jest"
   },
   "files": [
-    "dist"
+    "lib",
+    "lib-esm"
   ],
   "devDependencies": {
     "@babel/cli": "7.11.6",
     "@babel/core": "7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
+    "@fullfacing/browserslist-config": "^1.0.2",
     "@lessondesk/babel-preset": "1.0.0",
     "@lessondesk/eslint-config": "1.4.1",
     "@lessondesk/material-icons": "^1.0.2",
@@ -55,10 +63,10 @@
     "@storybook/theming": "6.0.21",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.3.0",
-    "babel-loader": "8.1.0",
     "babel-plugin-require-context-hook": "1.0.0",
     "babel-plugin-styled-components": "1.11.1",
     "chromatic": "^5.1.0",
+    "cross-env": "^7.0.2",
     "css-loader": "4.3.0",
     "eslint": "5.16.0",
     "eslint-config-prettier": "6.0.0",
@@ -67,53 +75,52 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
-    "formik": "1.5.8",
+    "formik": "2.1.5",
     "jest": "26.4.2",
     "jscodeshift": "^0.11.0",
     "markdown-loader-jest": "0.1.1",
-    "preact-render-to-json": "3.6.6",
+    "postcss": "^7",
+    "postcss-cli": "^8.0.0",
+    "postcss-import": "^12.0.1",
     "prettier": "1.19.1",
     "prettier-eslint-cli": "5.0.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
-    "react-datepicker": "^3.1.3",
     "react-dom": "16.8.6",
     "react-test-renderer": "16.13.1",
     "storybook-readme": "5.0.8",
     "style-loader": "0.23.1",
-    "styled-components": "4.4.1",
+    "styled-components": "5.2.0",
     "stylelint": "13.7.1",
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "url-loader": "2.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "yup": "^0.29.2"
   },
   "peerDependencies": {
     "@lessondesk/material-icons": "^1.0.2",
-    "formik": "^1.5.4",
+    "formik": "2.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "just-toasty": "^1.3.0",
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@fullfacing/browserslist-config": "^1.0.2",
-    "@rollup/plugin-node-resolve": "^9.0.0",
     "@styled-system/prop-types": "^5.1.5",
     "hoist-non-react-statics": "^3.3.2",
     "indexof": "^0.0.1",
-    "just-toasty": "^1.3.0",
     "lodash.debounce": "^4.0.8",
     "rc-slider": "^9.4.1",
-    "react-content-loader": "^5.1.0",
+    "react-content-loader": "^5.1.2",
+    "react-datepicker": "^3.1.3",
     "react-modal": "^3.11.2",
-    "react-phone-input-2": "^2.12.1",
-    "react-timekeeper": "^2.0.4",
-    "react-tooltip": "^4.2.7",
-    "rollup": "^2.27.1",
-    "rollup-plugin-css-only": "^2.1.0",
+    "react-phone-input-2": "^2.13.8",
+    "react-select": "^3.1.0",
+    "react-timekeeper": "^2.1.1",
+    "react-tooltip": "^4.2.10",
     "styled-system": "^5.1.5"
   },
   "browserslist": [
