--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "start-storybook -p 8000",
+    "start": "start-storybook -s ./ -p 8000",
     "build-storybook": "build-storybook -o storybook-build",
     "lint:js": "eslint --fix src",
     "lint:styles": "stylelint --fix src/**/*.js",
@@ -44,6 +44,7 @@
     "@babel/core": "7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
@@ -63,9 +64,9 @@
     "@storybook/theming": "6.0.21",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.3.0",
-    "babel-plugin-require-context-hook": "1.0.0",
     "babel-plugin-styled-components": "1.11.1",
     "chromatic": "^5.1.0",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "css-loader": "4.3.0",
     "eslint": "5.16.0",
@@ -78,6 +79,7 @@
     "formik": "2.1.5",
     "jest": "26.4.2",
     "jscodeshift": "^0.11.0",
+    "just-toasty": "^1.3.0",
     "markdown-loader-jest": "0.1.1",
     "postcss": "^7",
     "postcss-cli": "^8.0.0",
@@ -96,7 +98,6 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "url-loader": "2.1.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "yup": "^0.29.2"
   },
   "peerDependencies": {
